force-app/main/default/objects/System_Configuration__c/System_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>System Configuration</label>
</CustomObject>