force-app/main/default/objects/System_Configuration__c/fields/Active_Case_Team_ID__c.field-meta.xml
<CustomField>
    <fullName>Active_Case_Team_ID__c</fullName>
    <label>Active Case Team ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>