force-app/main/default/objects/System_Configuration__c/fields/AO_Baggage_Claim__c.field-meta.xml
<CustomField>
    <fullName>AO_Baggage_Claim__c</fullName>
    <label>AO Baggage Claim</label>
    <length>18</length>
    <type>Text</type>
</CustomField>