force-app/main/default/objects/System_Configuration__c/fields/Case_Closed_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Record_Type_ID__c</fullName>
    <label>Case Closed Record Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>