force-app/main/default/objects/System_Configuration__c/fields/Case_Flight_Name_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Flight_Name_SFDC_ID__c</fullName>
    <label>Case Flight Name SFDC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>