force-app/main/default/objects/System_Configuration__c/fields/Case_Group_Member_Record_Type_ID_for_MA__c.field-meta.xml
<CustomField>
    <fullName>Case_Group_Member_Record_Type_ID_for_MA__c</fullName>
    <label>Case Group Member Record Type ID for MA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>