force-app/main/default/objects/System_Configuration__c/fields/Case_Record_Type_ID_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_ID_Maintenance__c</fullName>
    <label>Case Record Type ID - Maintenance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>