force-app/main/default/objects/System_Configuration__c/fields/CTI_Accepted_Class_id__c.field-meta.xml
<CustomField>
    <fullName>CTI_Accepted_Class_id__c</fullName>
    <label>CTI Accepted Class id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>