force-app/main/default/objects/System_Configuration__c/fields/CTI_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CTI_Case_Number__c</fullName>
    <label>CTI Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>