force-app/main/default/objects/System_Configuration__c/fields/CTI_Nationality_Full_Name_id__c.field-meta.xml
<CustomField>
    <fullName>CTI_Nationality_Full_Name_id__c</fullName>
    <label>CTI Nationality Full Name id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>