force-app/main/default/objects/System_Configuration__c/fields/CTI_Station_ID__c.field-meta.xml
<CustomField>
    <fullName>CTI_Station_ID__c</fullName>
    <label>CTI Station ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>