force-app/main/default/objects/System_Configuration__c/fields/Customer_Feedback_Create__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_Create__c</fullName>
    <label>Customer Feedback Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>