force-app/main/default/objects/System_Configuration__c/fields/Customer_Feedback_View_RecordType_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_View_RecordType_ID__c</fullName>
    <label>Customer Feedback View RecordType ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>