force-app/main/default/objects/System_Configuration__c/fields/Email_Services_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Services_Address__c</fullName>
    <label>Email Services Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>