force-app/main/default/objects/System_Configuration__c/fields/Flight_Passenger_ID_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Flight_Passenger_ID_SFDC_ID__c</fullName>
    <label>Flight Passenger ID SFDC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>