force-app/main/default/objects/System_Configuration__c/fields/Inactive_Case_Team_ID__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Case_Team_ID__c</fullName>
    <label>Inactive Case Team ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>