force-app/main/default/objects/System_Configuration__c/fields/Internal_Email__c.field-meta.xml
<CustomField>
    <fullName>Internal_Email__c</fullName>
    <label>Internal Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>