force-app/main/default/objects/System_Configuration__c/fields/Maintenance_Case_DEP_STN_Field__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Case_DEP_STN_Field__c</fullName>
    <label>Maintenance Case DEP STN Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>