force-app/main/default/objects/System_Configuration__c/fields/Maintenance_Case_Flight_ID_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Case_Flight_ID_SFDC_ID__c</fullName>
    <label>Maintenance Case Flight ID SFDC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>