force-app/main/default/objects/System_Configuration__c/fields/Maintenance_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Case_Record_Type__c</fullName>
    <label>Maintenance Case Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>