force-app/main/default/objects/System_Configuration__c/fields/Passenger_Name_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name_SFDC_ID__c</fullName>
    <label>Passenger Name SFDC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>