force-app/main/default/objects/System_Configuration__c/fields/Passenger_Record_Type_New_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Record_Type_New_Passenger__c</fullName>
    <label>Passenger Record Type ID - New Passenger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>