force-app/main/default/objects/System_Configuration__c/fields/Previous_Flight_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Previous_Flight_Date_Field__c</fullName>
    <label>Previous Flight Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>