force-app/main/default/objects/System_Configuration__c/fields/Reminder_Time__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Time__c</fullName>
    <label>Reminder Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>