force-app/main/default/objects/System_Configuration__c/fields/S3_Tier_1_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>S3_Tier_1_Queue_ID__c</fullName>
    <label>S3 Tier 1 Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>