force-app/main/default/objects/System_Configuration__c/fields/S4_First_Platinum_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>S4_First_Platinum_Queue_ID__c</fullName>
    <label>S4 First &amp; Platinum Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>