force-app/main/default/objects/System_Configuration__c/fields/S4_Level_8_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>S4_Level_8_Queue_ID__c</fullName>
    <label>S4 Level 8 Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>