force-app/main/default/objects/System_Configuration__c/fields/TGWebMaster_Email__c.field-meta.xml
<CustomField>
    <fullName>TGWebMaster_Email__c</fullName>
    <label>TGWebMaster Email</label>
    <type>Email</type>
</CustomField>